syntax = "proto3";
package helloworld;

service MessageStorage {
    rpc store (StoreRequest) returns (Empty);
    rpc gets   (GetsRequest) returns (GetsResponse);
    rpc delete (DeleteRequest) returns (Empty);
}

message StoreRequest {
    bytes destinationPublicKey = 1;
    bytes message = 2;

}

message GetsRequest {
    bytes publicKey = 1;

}

message Message {
    bytes message = 1;
}
message DeleteRequest {
    bytes identityKey = 1;
}
message GetsResponse {
    repeated Message messages = 1;
}

message RequestId {
    bytes value = 1;
}

message Empty {

}